Fix content being out of bounds on horizontal mobile screens

--- a/app.css
+++ b/app.css
@@ -60,7 +60,7 @@ p {
 @media (min-width: 35rem) {
   .flip-card {
     max-width: 45rem;
-    height: 25rem;
+    max-height: 25rem;
   }
 }
 
